# quadro

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  commands.txt  package.xml  roboto.xml
config/: controllers.yaml  effort_controller.yaml  joint_position_controllers.yaml  leg_controllers.yaml  one_motor_params.yaml  rviz_config.rviz  rviz_real.rviz  torque_controllers.yaml
description/: leg.gazebo  leg.xacro  leg_non_rotated.xacro  leg_rotated.xacro  materials.xacro  one_motor.gazebo  one_motor.xacro  one_motor_control.xacro  quadro.gazebo  quadro.trans  quadro.xacro  robot.gazebo  robot.xacro  robot_full_urdf.urdf  robot_joint_position.gazebo  robot_short_legs.xacro  ros2_control.xacro
description/assets/: back_plate.part  back_plate.stl  back_stop.part  back_stop.stl  battery.part  battery.stl  bearing.part  bearing.stl  bot_4.part  bot_4.stl  bot_l.part  bot_l.stl  bot_pipe_half.part  bot_pipe_half.stl  feet.part  feet.stl  l4_l.part  l4_r.part  l4_r.stl  lin_1_support_bl.part  lin_1_support_bl.stl  lin_1_support_br.part  lin_1_support_br.stl  lin_1_support_fl.part  lin_1_support_fl.stl  lin_1_support_fr.part  lin_1_support_fr.stl  lin_2_bl.part  lin_2_bl.stl  lin_2_br.part  lin_2_br.stl  lin_2_fl.part  lin_2_fl.stl  lin_2_fr.part  lin_2_fr.stl  lin_3_bot_l.part  lin_3_bot_l.stl  lin_3_bot_r.part  lin_3_bot_r.stl  lin_3_top_l.part  (+36 more)
description/leg_assets/: back_plate.part  back_stop.part  back_stop.stl  bearing.part  bearing.stl  bot_l.part  feet.part  l4_l.part  l4_l.stl  lin_1_support_bl.part  lin_1_support_bl.stl  lin_1_support_br.part  lin_2_bl.part  lin_2_bl.stl  lin_2_br.part  lin_3_bot_l.part  lin_3_bot_r.part  lin_3_top_l.part  lin_3_top_l.stl  lin_3_top_r.part  lin_3_top_r.stl  lin_4_l.part  lin_4_l.stl  lin_4_r.part  lin_4_r.stl  lin_top_l.part  lin_top_l.stl  lin_top_r.part  mid_l.part  mid_l.stl  motor.part  motor.stl  shaft.part  stand.part  top_l.part  top_l.stl
description/meshes/: base_link.stl  link_1_1.stl  link_2_1.stl  link_3_1.stl
description/motor_assets/: motor.part  shaft.part
description/robot_full_urdf/: robot_full_urdf.usd
description/robot_full_urdf/configuration/: robot_full_urdf_physics.usd  robot_full_urdf_robot.usd
description/world/: world.sdf
hardware/: cybergear_driver.cpp  hw_actuators.cpp
hardware/cybergear_driver_core/: cybergear_packet.hpp
hardware/include/: actuator.hpp  cybergear_driver.hpp  hw_actuators.hpp
include/: inverse_kinematics.hpp  position_controller.hpp
isaac_sim_files/: leg.urdf
isaac_sim_files/leg/: leg.usd
isaac_sim_files/leg/configuration/: leg_physics.usd  leg_robot.usd  leg_sensor.usd
launch/: gazebo_launch.py  isaac_sim_launch.py  leg_gazebo.py  leg_gazebo_launch.py  leg_isaac_sim_launch.py  one_motor_real.py  quadro_launch.py  robot_gazebo_launch.py  torque_gazebo_launch.py  viz_launch.py
rviz/: demo.rviz
scripts/: imu_viz.py  plotter.py
src/: back_legs_trajectory.cpp  inverse_kinematics.cpp  position_controller.cpp  simple_trajectory_publisher.cpp  torque_controller.cpp
urdf/: cybergear_servo.urdf.xacro  cybergear_servo.xacro
